🐛 Fix initial options window height extended off screen
Calls the chrome api to determine the window height and set the max height at 80% #18

--- a/options/options.css
+++ b/options/options.css
@@ -6,13 +6,16 @@
 
 html {
 	font-size: 16px;
+	overflow: hidden;
 }
 
 body {
-	margin: 2rem;
+	margin: 0;
+	padding: 2rem;
 	font: 1rem/1.5 "Helvetica Neue", Arial, sans-serif;
 	color: #5a5a5a;
 	min-width: 34rem;
+	overflow: auto;
 }
 
 a {
